force-app/main/default/objects/Target_Acknowledgement__c/Target_Acknowledgement__c.object-meta.xml
<CustomObject>
    <label>Target Acknowledgement</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Target Acknowlegement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Acknowledgements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>