force-app/main/default/objects/Target_Acknowledgement__c/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <type>TextArea</type>
</CustomField>