force-app/main/default/objects/Target_Acknowledgement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not yet started</fullName>
                <default>true</default>
                <label>Not yet started</label>
            </value>
            <value>
                <fullName>Not yet Acknowledged</fullName>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Reverted</fullName>
            </value>
            <value>
                <fullName>Target sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>